Use Set.of(..) instead of legacy singleton(..)